[package]
name = "mastocrom"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.9.0"
serde = { version = "1.0.110", features = ["derive"] }
url = { version = "2.1.1", features = ["serde"] }
anyhow = "1.0.31"
attohttpc = { version = "0.13.0", features = ["json"] }
elefren = { version = "0.21.0", features = ["toml"] }
html5ever = "0.25.1"
openssl = { version = "0.10.29", features = ["vendored"] }
structopt = "0.3.14"
shlex = "0.1.1"
itertools = "0.9.0"
lazy_format = "1.7.4"
log = "0.4.8"
flexi_logger = "0.15.2"

[patch.crates-io]
elefren = { git = "https://github.com/leo60228/elefren.git", branch = "ws" }
